--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bhoomi Karnataka | RTC Pahani & Land Records Online</title>
+  <title>Bhoomi | Bhoomi Karnataka, Check RTC Pahani, Mutation Status & Land Records Online @landrecords.karnataka.gov.in</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="Bhoomi is the official digital land records portal for Karnataka. View RTC (Pahani), Mutation status, and Revenue Maps.">
-  <meta name="keywords" content="Bhoomi Karnataka, RTC online, Pahani, land records Karnataka, Mutation status, Revenue Maps, i-RTC, Dishaank App, XML Verification">
+  <meta name="description" content="Bhoomi RTC, commonly known in Karnataka as Pahani (ಪಹಣಿ), is the official digital land record document managed by the State Government. It serves as the primary legal proof of land ownership">
+  <meta name="keywords" content="Bhoomi, bhoomi online, bhoomi rtc, rtc, rtc Karnataka, RTC online, Pahani, pahani online, view rtc, land records Karnataka, Mutation status, Revenue Maps, i-RTC, Dishaank App, XML Verification">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -82,6 +82,7 @@
       border: none;
       padding: 12px;
       transition: 0.3s;
+      border-radius: 50px;
     }
 
     .service-btn:hover {
@@ -380,3 +381,4 @@
 </body>
 
 </html>
+
