--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-bold text-white" href="https://bhoomirtc.net.in">Home</a>
+          <a class="nav-link fw-bold text-white"/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold text-white" href="https://bhoomirtc.net.in/about-us.html">About Us</a>
+          <a class="nav-link fw-bold text-white" href="/about-us.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold text-white" href="https://bhoomirtc.net.in/privacy-policy.html">Privacy Policy</a>
+          <a class="nav-link fw-bold text-white" href="/privacy-policy.html">Privacy Policy</a>
         </li>
       </ul>
     </div>
@@ -381,6 +381,7 @@
 </body>
 
 </html>
+
 
 
 
