--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
 
   <h3>Why is the RTC (Pahani) Document Important?</h3>
   <p>The RTC contains vital details about a specific piece of land:</p>
+  <div class="blog-image">
+    <img 
+  src="pahani.webp" 
+  srcset="pahani.webp 400w, pahani.webp 800w, pahani.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Bhoomi Pahani Document" 
+  width="388" 
+  height="220">
+</div>
   <ul>
     <li><strong>Owner Details:</strong> Who currently owns the land.</li>
     <li><strong>Tenancy:</strong> Who is cultivating the land.</li>
@@ -254,6 +263,15 @@
 
   <h2>How to Check Bhoomi RTC (Pahani) Online</h2>
   <p>Follow this step-by-step guide to view your land records on the Karnataka Bhoomi portal.</p>
+  <div class="blog-image">
+    <img 
+  src="viewpahani.webp" 
+  srcset="viewpahani.webp 400w, viewpahani.webp 800w, viewpahani.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Bhoomi RTC Pahani Document" 
+  width="388" 
+  height="220">
+</div>
   <p><strong>Step 1: Visit the Portal</strong><br>Go to the official Bhoomi Land Records website (landrecords.karnataka.gov.in).</p>
   <p><strong>Step 2: Select 'View RTC and MR'</strong><br>On the homepage, look for the "Services" section and click on "View RTC and MR".</p>
   <p><strong>Step 3: Enter Land Details</strong><br>You will be asked to fill in the following details based on where your land is located: District, Taluk, Hobli, Village.</p>
@@ -263,7 +281,15 @@
 
   <h3>What is a Digitally Signed i-RTC?</h3>
   <p>Unlike the informational copy, a Digitally Signed i-RTC is a legal document valid for court proceedings, bank loan applications, and property registration. It carries a unique QR code and digital signature that verifies its authenticity.</p>
-  
+  <div class="blog-image">
+    <img 
+  src="irtc.webp" 
+  srcset="irtc.webp 400w, irtc.webp 800w, irtc.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Bhoomi irtc Digital Document" 
+  width="388" 
+  height="220">
+</div>
   <h4>Steps to Download Signed i-RTC:</h4>
   <ol>
     <li><strong>Login:</strong> Visit the Bhoomi portal and select "i-RTC Wallet Services". You must log in with your User ID (or create a new account).</li>
@@ -275,6 +301,15 @@
 
   <h3>How to Check Mutation Status (MR) Online</h3>
   <p>If you have recently bought or sold land, you need to check if the ownership transfer (Mutation) has been updated in the government records.</p>
+  <div class="blog-image">
+    <img 
+  src="mutation.webp" 
+  srcset="mutation.webp 400w, mutation.webp 800w, mutation.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Bhoomi Mutation Document" 
+  width="388" 
+  height="220">
+</div>
   <ul>
     <li>Navigate to the "View RTC and MR" section.</li>
     <li>Select the "Mutation Status" tab.</li>
@@ -287,6 +322,15 @@
 
   <h3>How to View Village Revenue Maps Online?</h3>
   <p>A Revenue Map shows the geographical boundaries of a village and the division of survey numbers within it. It helps landowners identify the shape and location of their plot within the village layout.</p>
+  <div class="blog-image">
+    <img 
+  src="revenuemap.webp" 
+  srcset="revenuemap.webp 400w, revenuemap.webp 800w, revenuemap.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Bhoomi Revenuemap Document" 
+  width="388" 
+  height="220">
+</div>
   <p><strong>How to Download:</strong></p>
   <ol>
     <li>Go to the "Revenue Maps" section on the Bhoomi home page.</li>
@@ -381,6 +425,7 @@
 </body>
 
 </html>
+
 
 
 
