--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="description" content="Bhoomi RTC, commonly known in Karnataka as Pahani (ಪಹಣಿ), is the official digital land record document managed by the State Government. It serves as the primary legal proof of land ownership">
   <meta name="keywords" content="Bhoomi, bhoomi online, bhoomi rtc, rtc, rtc Karnataka, RTC online, Pahani, pahani online, view rtc, land records Karnataka, Mutation status, Revenue Maps, i-RTC, Dishaank App, XML Verification">
-
+  <meta name="google-site-verification" content="hOi0kbMuQzoGcZYqpW49T3ptPb05nAT-sHcJwdkimng" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.webp">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -425,6 +425,7 @@
 </body>
 
 </html>
+
 
 
 
