--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bhoomi | Bhoomi Karnataka, Check RTC Pahani, Mutation Status & Land Records Online @landrecords.karnataka.gov.in</title>
+  <title>Bhoomi | Bhoomi Karnataka, View RTC Pahani, Mutation Status & Land Records Online @landrecords.karnataka.gov.in</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description" content="Bhoomi RTC, commonly known in Karnataka as Pahani (ಪಹಣಿ), is the official digital land record document managed by the State Government. It serves as the primary legal proof of land ownership">
@@ -425,6 +425,7 @@
 </body>
 
 </html>
+
 
 
 
