--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     The most important document you can access here is the RTC (Record of Rights, Tenancy and Crops), locally known as Pahani. Whether you are a farmer applying for a loan or a landowner verifying property details, the Bhoomi portal eliminates the need to visit government offices, allowing you to access records from your home.
   </p>
 
-  <h2 id="dashboard" style="padding-top: 60px; margin-top: -30px;">Bhoomi Services Dashboard</h2>
+  <h2 id="dashboard" class="mb-4" style="padding-top: 60px; margin-top: -30px;">Bhoomi Services Dashboard</h2>
   <div class="row g-3 mb-4">
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://landrecords.karnataka.gov.in/Service2/">View RTC & MR</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://www.landrecords.karnataka.gov.in/citizenportal/">Citizen Registration</a></div>
@@ -425,6 +425,7 @@
 </body>
 
 </html>
+
 
 
 
