--- a/about-us.html
+++ b/about-us.html
@@ -192,7 +192,7 @@
     We value transparency and user feedback. If you have suggestions on how we can improve our guides or if you have questions regarding the information provided here, please feel free to reach out to us at:
   </p>
   <p>
-    <strong>Email:</strong> <a href="mailto:support@bhoomikarnataka.in" style="color: #003366; text-decoration: underline;">support@bhoomikarnataka.in</a>
+    <strong>Email:</strong> <a href="mailto:bhoomionlinertchelp@gmail.com" style="color: #003366; text-decoration: underline;">bhoomionlinertchelp@gmail.com</a>
   </p>
 
 </div>
@@ -211,6 +211,7 @@
 </body>
 
 </html>
+
 
 
 
