--- a/about-us.html
+++ b/about-us.html
@@ -168,7 +168,7 @@
 
   <h3>Our Vision</h3>
   <p>
-    In an era of digital transformation, we believe that every landowner and farmer in Karnataka should have easy access to their land records without the need for multiple visits to government offices. We aim to bridge the information gap by providing a user-friendly guide to the official Bhoomi services.
+    In an era of digital transformation, we believe that every landowner and farmer in Karnataka should have easy access to their land records without the need for multiple visits to government offices. We aim to bridge the information gap by providing a user-friendly source to the official Bhoomi services.
   </p>
 
   
@@ -211,6 +211,7 @@
 </body>
 
 </html>
+
 
 
 
