--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
           <a class="nav-link fw-bold text-white"/">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link fw-bold text-white" href="/dishaank.html">Dishaank</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link fw-bold text-white" href="/about-us.html">About Us</a>
         </li>
         <li class="nav-item">
@@ -425,6 +428,7 @@
 </body>
 
 </html>
+
 
 
 
