--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     tr:nth-child(even) { background-color: #f9f9f9; }
     tr:hover { background-color: #f1f1f1; }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4061167980012817"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -428,6 +430,7 @@
 </body>
 
 </html>
+
 
 
 
