--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://landrecords.karnataka.gov.in/Service12/MutationStatus.aspx">Mutation Status</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://landrecords.karnataka.gov.in/citizenportal/">Land Conversion</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://bhoomojini.karnataka.gov.in/index.html">Mojini v3</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://play.google.com/store/apps/details?id=com.ksrsac.sslr&hl=en_IN">Dishaank App</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://bhoomirtc.net.in/dishaank.html">Dishaank App</a></div>
  </div>
 
   <h3>Key Details You Should Know</h3>
@@ -430,6 +430,7 @@
 </body>
 
 </html>
+
 
 
 
