--- a/about-us.html
+++ b/about-us.html
@@ -191,6 +191,16 @@
   </p>
 
   <h3>Contact Information</h3>
+  <p><strong>
+    For all inquiries regarding land administration, disputes, or official records, please strictly contact the competent authority via:
+  </p></strong>
+  <p>
+    <strong>Email:</strong> <a href="mailto:bhoomi@karnataka.gov.in" style="color: #003366; text-decoration: underline;">bhoomi@karnataka.gov.in</a>
+  </p>
+
+  <hr>
+
+
   <p>
     We value transparency and user feedback. If you have suggestions on how we can improve our guides or if you have questions regarding the information provided here, please feel free to reach out to us at:
   </p>
@@ -214,6 +224,7 @@
 </body>
 
 </html>
+
 
 
 
