--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -166,7 +166,7 @@
 <div class="container-fluid my-4">
 
   <h1>Privacy Policy</h1>
-  <p class="text-muted">Last updated: December 26, 2025</p>
+  <p class="text-muted">Last updated: 24 January, 2026</p>
 
   <p>
     This Privacy Policy describes Our policies and procedures on the collection, use, and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects you.
@@ -267,6 +267,13 @@
     <li><strong>For business transfers:</strong> We may use Your information to evaluate or conduct a merger, divestiture, restructuring, reorganization, dissolution, or other sale or transfer of some or all of Our assets.</li>
     <li><strong>For other purposes:</strong> We may use Your information for other purposes, such as data analysis, identifying usage trends, determining the effectiveness of our promotional campaigns and to evaluate and improve our Service.</li>
   </ul>
+  <h3>Google Ads & Remarketing</h3>
+  <p>We use Google Ads (including Google AdSense and Remarketing) to provide advertisements that are relevant to your interests. To ensure transparency, please note the following:</p>
+  <ul>
+    <li><strong>Cookies and Tracking:</strong> Google uses cookies to serve ads based on your previous visits to our website or other websites on the internet.</li>
+    <li><strong>Personalized Advertising:</strong> Google’s use of advertising cookies (such as the DART cookie) enables it and its partners to serve ads to you based on your visit to our site and/or other sites on the internet.</li>
+    <li><strong>Opting Out:</strong> You may opt out of personalized advertising by visiting Google Ads Settings. Alternatively, you can opt out of a third-party vendor's use of cookies for personalized advertising by visiting <a href="https://www.aboutads.info">www.aboutads.info</a></li>
+  </ul>
 
   <h3>Retention of Your Personal Data</h3>
   <p>
@@ -339,5 +346,6 @@
 
 
 </html>
+
 
 
