--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -272,7 +272,7 @@
   <ul>
     <li><strong>Cookies and Tracking:</strong> Google uses cookies to serve ads based on your previous visits to our website or other websites on the internet.</li>
     <li><strong>Personalized Advertising:</strong> Google’s use of advertising cookies (such as the DART cookie) enables it and its partners to serve ads to you based on your visit to our site and/or other sites on the internet.</li>
-    <li><strong>Opting Out:</strong> You may opt out of personalized advertising by visiting Google Ads Settings. Alternatively, you can opt out of a third-party vendor's use of cookies for personalized advertising by visiting <a href="https://www.aboutads.info">www.aboutads.info</a></li>
+    <li><strong>Opting Out:</strong> You may opt out of personalized advertising by visiting <a href="https://myadcenter.google.com/u/0/home?sasb=true&ref=ad-settings">Google Ads Settings</a> Alternatively, you can opt out of a third-party vendor's use of cookies for personalized advertising by visiting <a href="https://www.aboutads.info">www.aboutads.info</a></li>
   </ul>
 
   <h3>Retention of Your Personal Data</h3>
@@ -346,6 +346,7 @@
 
 
 </html>
+
 
 
 
