--- a/index.html
+++ b/index.html
@@ -401,6 +401,76 @@
         </tr>
       </tbody>
   </table>
+  <h3>Technical & Access Issues</h3>
+  <p>The portal handles massive traffic, which can lead to slow loading times or "Server Not Found" errors.</p>
+  <ul>
+    <li><strong>Browser Compatibility:</strong> The website works best on Google Chrome or Mozilla Firefox. Avoid using older versions of Internet Explorer.</li>
+    <li><strong>Clear Cache:</strong> If the page isn't loading correctly or buttons aren't clicking, clear your browser’s Cache and Cookies (Ctrl+Shift+Delete) and restart the browser.</li>
+    <li><strong>Pop-up Blockers:</strong> The RTC is usually generated in a new window. If nothing happens when you click "View" or "Download," check your browser’s address bar for a blocked pop-up icon and select "Always allow."</li>
+    <li><strong>OTP Not Received:</strong> During registration or login, if you don't receive an OTP, wait 2 minutes before clicking "Resend." Ensure your mobile number is not on a DND (Do Not Disturb) list.</li>
+  </ul>
+
+  <h3>Payment & Download Issues</h3>
+  <p>These are the most common frustrations, especially when money is debited but the document doesn't appear.</p>
+  <table>
+      <thead>
+        <tr>
+          <th>Issue</th>
+          <th>Solution</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><strong>Money Deducted, No PDF</strong></td>
+          <td>Go to the "Missed i-RTC" section on the portal. Enter your order number or transaction details to re-download the document without paying again.</td>
+        </tr>
+        <tr>
+          <td><strong>Payment Status "Pending"</strong></td>
+          <td>This usually clears within 24 hours. Avoid making a second payment immediately. Check the "Check Payment Status" tool on the site.</td>
+        </tr>
+        <tr>
+          <td><strong>PDF Not Opening</strong></td>
+          <td>Ensure you have a PDF reader (like Adobe Acrobat) installed. If the file is 0KB, the download was interrupted; try again from the "Missed i-RTC" section.</td>
+        </tr>
+      </tbody>
+  </table>
+
+  <h3>Data & Record Issues</h3>
+  <p>Sometimes the website works fine, but the information displayed is incorrect or missing.</p>
+  <ul>
+    <li><strong>Survey Number Not Found:</strong> Ensure you are entering the Surnoc and Hissa numbers correctly.</li>
+    <ul>
+      <li>Try searching by <strong>Owner Name</strong> instead of Survey Number to see if the record is indexed differently.</li>
+    </ul>
+    <li><strong>Name or Measurement Mismatch:</strong> If the owner's name is spelled wrong or the land area is incorrect, this cannot be fixed online. You must visit the <strong>Tahsildar office (Taluk level)</strong> with your original Sale Deed to apply for a <strong>Rectification Mutation</strong>.</li>
+    <li><strong>Mutation Status "Pending":</strong> If you recently bought land, it takes roughly <strong>45–60 days</strong> for the mutation process to reflect on the RTC. You can track this under the <strong>"Mutation Status"</strong> tab using your transaction ID.</li>
+  </ul>
+
+  <h3>Official Helpdesk & Contact</h3>
+  <p>If troubleshooting fails, users should contact the Bhoomi Monitoring Cell directly.</p>
+  <table>
+      <thead>
+        <tr>
+          <th>Helpline</th>
+          <th>Contact</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><strong>Helpline Numbers</strong></td>
+          <td><a href="tel:080-22113255">080-22113255</a> / <a href="tel:8277864065">8277864065</a> / <a href="tel:8277864067">8277864067</a></td>
+        </tr>
+        <tr>
+          <td><strong>Email</strong></td>
+          <td><a href="mailto:bhoomi@karnataka.gov.in">bhoomi@karnataka.gov.in</a> (or <a href="mailto:bmchelpdesk.s@gmail.com">bmchelpdesk.s@gmail.com</a>)</td>
+        </tr>
+        <tr>
+          <td><strong>Physical Office</strong></td>
+          <td>SSLR Building, K.R. Circle, Bangalore – 560001.</td>
+        </tr>
+      </tbody>
+  </table>
+  <p><strong>Pro Tip:</strong> Always take a screenshot of your Transaction ID or PRN (Payment Reference Number) immediately after paying. This is the only way the helpdesk can track your payment if the download fails.</p>
 
   <h3>Frequently Asked Questions (FAQs)</h3>
   <div class="faq-item">
@@ -430,6 +500,7 @@
 </body>
 
 </html>
+
 
 
 
