--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         </tr>
       </tbody>
   </table>
-  <p><strong>Pro Tip:</strong> Always take a screenshot of your Transaction ID or PRN (Payment Reference Number) immediately after paying. This is the only way the helpdesk can track your payment if the download fails.</p>
+  <p><strong>Expert Advice:</strong> Always take a screenshot of your Transaction ID or PRN (Payment Reference Number) immediately after paying. This is the only way the helpdesk can track your payment if the download fails.</p>
 
   <h3>Frequently Asked Questions (FAQs)</h3>
   <div class="faq-item">
@@ -500,6 +500,7 @@
 </body>
 
 </html>
+
 
 
 
