--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
     <li><strong>Pay & Print:</strong> Click "Pay and Print." The PDF will download immediately.</li>
   </ol>
   <p>Save this PDF securely; the download link may expire.</p>
+  <p>The Bhoomi server often undergoes maintenance between 10 PM and 12 AM. If you are trying to generate an i-RTC (certified copy), we recommend doing it during morning hours for a faster payment gateway response.</p>
 
   <h3>How to Check Mutation Status (MR) Online</h3>
   <p>If you have recently bought or sold land, you need to check if the ownership transfer (Mutation) has been updated in the government records.</p>
@@ -500,6 +501,7 @@
 </body>
 
 </html>
+
 
 
 
