--- a/about-us.html
+++ b/about-us.html
@@ -168,6 +168,16 @@
   <p>
     Welcome to <strong>Bhoomi Karnataka</strong>, your dedicated informational resource for navigating the digital land records system of Karnataka. Our mission is to simplify complex government processes and provide citizens with clear, step-by-step guidance on managing their property documents online.
   </p>
+  <h3>Making Bhoomi Accessible for Every Citizen</h3>
+  <p>
+    Hi, I’m Masroor Ahmad, a developer with a passion for digital transparency. While the Karnataka Bhoomi portal is a powerful tool, it can be a maze for the average user—broken links, hidden survey documents, and confusing mutation statuses often stand in the way of essential land records.
+  </p>
+  <p>
+    I built <a href="https://bhoomirtc.net.in/">bhoomirtc.net.in</a> to serve as a "translation layer" between the official database and the people who need it most. My goal is to take the technical "under-the-hood" knowledge of how these systems work and turn it into simple, step-by-step guides. Whether you are a farmer trying to verify a mutation or a first-time homebuyer checking a survey sketch (11E), I help you find the services that are often hidden in plain sight.
+  </p>
+  <p>
+    <strong>My focus:</strong> Speed, clarity, and ensuring that no citizen has to pay a middleman for information they are entitled to for free.
+  </p>
 
   <h3>Our Vision</h3>
   <p>
@@ -224,6 +234,7 @@
 </body>
 
 </html>
+
 
 
 
