--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
   <title>About Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.webp">
+  <link rel="canonical" href="https://bhoomirtc.net.in/about-us" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -234,6 +235,7 @@
 </body>
 
 </html>
+
 
 
 
