--- a/dishaank.html
+++ b/dishaank.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="canonical" href="https://bhoomirtc.net.in/dishaank" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -335,5 +336,6 @@
 </body>
 
 </html>
+
 
 
