--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
   <p>These maps are large files; ensure you have a stable internet connection.</p>
 
   <h3>What is the Dishaank App?</h3>
-  <p>Developed by the Karnataka Remote Sensing Applications Centre (KSRSAC), the Dishaank App allows you to see your survey number based on your current GPS location. This is incredibly useful for verifying if a plot of land you are buying actually falls under the survey number claimed by the seller.</p>
+  <p>Developed by the Karnataka Remote Sensing Applications Centre (KSRSAC), the <a href="https://bhoomirtc.net.in/dishaank.html">Dishaank</a> App allows you to see your survey number based on your current GPS location. This is incredibly useful for verifying if a plot of land you are buying actually falls under the survey number claimed by the seller.</p>
   <p><strong>How to Use:</strong></p>
   <ul>
     <li>Download Dishaank from the Google Play Store.</li>
@@ -502,6 +502,7 @@
 </body>
 
 </html>
+
 
 
 
